--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "compass-mixins": "^0.12.10",
     "fs": "0.0.1-security",
     "marked": "^1.1.1",
     "node-sass": "^4.14.1",
